[follow] user detail + init follow
