# api/routes/user_router.go
@@ -21,4 +21,7 @@ func (r UserRouter) Setup() {
 	r.handler.Engine.GET("/me", r.userController.Me)
 	r.handler.Engine.PATCH("/me", r.userController.MeUpdate)
 	r.handler.Engine.POST("/me/password", r.userController.MePassword)
+
+	r.handler.Engine.GET("/users/:id", r.userController.Detail)
+	r.handler.Engine.POST("/users/:id/follow", r.userController.Follow)
 }
