# docs/swagger.yaml
@@ -170,6 +170,13 @@ definitions:
       name:
         type: string
     type: object
+  dto.User:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   dto.UserInComment:
     properties:
       email:
@@ -538,6 +545,26 @@ paths:
       summary: Register a new User
       tags:
       - auth
+  /users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Detail User
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.User'
+              type: object
+      summary: Get Detail User
+      tags:
+      - user
 securityDefinitions:
   BearerAuth:
     in: header
